--- a/app/src/main/res/layout/person_infor.xml
+++ b/app/src/main/res/layout/person_infor.xml
@@ -18,7 +18,9 @@
             android:layout_marginLeft="10.0dip"
             android:layout_marginTop="5.0dip"
             android:layout_marginRight="10.0dip"
-            android:layout_marginBottom="5.0dip" />
+            android:layout_marginBottom="5.0dip"
+            android:src="@mipmap/home"
+            />
         <LinearLayout
             android:layout_height="fill_parent"
             android:layout_width="wrap_content"
@@ -27,17 +29,17 @@
               该部分表示的是用户的信息部分
               个人信息页-->
             <TextView
-                android:id="@+id/titleText"
+                android:id="@+id/tv_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:lines="1"
                 android:paddingBottom="2.0dip"
                 android:paddingLeft="2.0dip"
                 android:paddingRight="8.0dip"
                 android:paddingTop="10.0dip"
-                android:lines="1"
+                android:text="登录/注册"
                 android:textColor="#ffff4c06"
-                android:textSize="17.0dip"
-                />
+                android:textSize="17.0dip" />
         </LinearLayout>
         <!--利用recycleview实现各个list-->
 
@@ -55,14 +57,14 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/group_one"
+        android:id="@+id/lv_group_one"
         android:background="@color/gray">
     </ListView>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/group_two">
+        android:id="@+id/lv_group_two">
 
     </ListView>
 </LinearLayout>
