modified:   app/build.gradle 	deleted:    app/src/main/java/com/example/wkg/part_timejob/Fragment_main.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/Fragment_main/Fragment_main.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/Fragment_main/GlideImageLoader.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/MainActivity.java 	modified:   app/src/main/res/layout/dialog_changepassword.xml 	modified:   app/src/main/res/layout/fragment_main.xml

--- a/app/src/main/res/layout/dialog_changepassword.xml
+++ b/app/src/main/res/layout/dialog_changepassword.xml
@@ -30,11 +30,12 @@
         android:id="@+id/et_changepassword_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/et_changepassword_email"
-        android:layout_centerVertical="true"
         android:ems="10"
         android:hint="旧密码"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:layout_below="@+id/et_changepassword_email"
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginTop="15dp" />
 
     <EditText
         android:id="@+id/et_changepassword_verity"
@@ -71,13 +72,12 @@
         android:id="@+id/et_changepassword_newpas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView3"
-        android:layout_marginBottom="26dp"
         android:ems="10"
         android:hint="新密码"
         android:inputType="textPassword"
-        android:layout_alignEnd="@+id/et_changepassword_verity"
-        android:layout_toEndOf="@+id/imageView3" />
+        android:layout_below="@+id/imageView4"
+        android:layout_toEndOf="@+id/imageView4"
+        android:layout_marginTop="25dp" />
 
     <ImageView
         android:id="@+id/imageView6"
