new file:   app/BaiduLBS_Android.jar 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/wkg/part_timejob/Constants.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/Fragment_main/Fragment_main.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/Job.java 	new file:   app/src/main/libs/BaiduLBS_Android.jar 	new file:   app/src/main/libs/arm64-v8a/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/arm64-v8a/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/arm64-v8a/liblocSDK7a.so 	new file:   app/src/main/libs/armeabi-v7a/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/armeabi-v7a/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/armeabi-v7a/liblocSDK7a.so 	new file:   app/src/main/libs/armeabi/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/armeabi/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/armeabi/liblocSDK7a.so 	new file:   app/src/main/libs/x86/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/x86/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/x86/liblocSDK7a.so 	new file:   app/src/main/libs/x86_64/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/x86_64/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/x86_64/liblocSDK7a.so 	modified:   app/src/main/res/layout/fragment_main.xml

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,4 +19,10 @@
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="250dp" />
+    <com.amap.api.maps.MapView
+        android:id="@+id/main_maps"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    />
+
 </LinearLayout>
