--- a/app/src/main/res/layout/dialog_findpassword.xml
+++ b/app/src/main/res/layout/dialog_findpassword.xml
@@ -3,13 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/et_findpas_email"
+        android:layout_toStartOf="@+id/et_findpas_email"
+        app:srcCompat="@mipmap/mail"
+        android:layout_above="@+id/et_findpas_code" />
     <EditText
         android:id="@+id/et_findpas_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:="true"
         android:layout_marginTop="135dp"
         android:ems="10"
         android:hint="邮箱"
@@ -42,15 +50,6 @@
         android:ems="10"
         android:hint="密码"
         android:inputType="textPassword" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/et_findpas_email"
-        android:layout_toStartOf="@+id/et_findpas_email"
-        app:srcCompat="@mipmap/mail"
-        android:layout_above="@+id/et_findpas_code" />
 
     <ImageView
         android:id="@+id/iv_finpas_bindtocode"
